# lamella

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  rust-toolchain.toml
corlib/: corlib.cs
corlib/Lamella/Runtime/: RuntimeProvidedAttribute.cs
corlib/System/: Activator.cs  ArgIterator.cs  ArgumentException.cs  ArgumentNullException.cs  ArgumentOutOfRangeException.cs  Array.cs  Attributes.cs  BitConverter.cs  Boolean.cs  Buffer.cs  Byte.cs  Char.cs  Console.cs  Convert.cs  DateTime.cs  DayOfWeek.cs  Decimal.cs  Delegates.cs  DivideByZeroException.cs  Double.cs  Environment.cs  Exception.cs  FormatException.cs  GC.cs  Guid.cs  ICloneable.cs  IComparable.cs  IDisposable.cs  IFormatProvider.cs  IFormattable.cs  Int16.cs  Int32.cs  Int64.cs  IntPtr.cs  InvalidOperationException.cs  Math.cs  NotImplementedException.cs  NotSupportedException.cs  NumberFormatter.cs  Object.cs  (+19 more)
corlib/System/Collections/: ArrayList.cs  ArrayListEnumerator.cs  BitArray.cs  CaseInsensitiveComparer.cs  Comparer.cs  DictionaryEntry.cs  Hashtable.cs  HashtableEnumerator.cs  ICollection.cs  IComparer.cs  IDictionary.cs  IDictionaryEnumerator.cs  IEnumerable.cs  IEnumerator.cs  IList.cs  ObjectArrayCollection.cs  ObjectArrayEnumerator.cs  Queue.cs  QueueEnumerator.cs  SortedList.cs  SortedListEnumerator.cs  Stack.cs  StackEnumerator.cs
corlib/System/Diagnostics/: Debug.cs  DefaultTraceListener.cs  TextWriterTraceListener.cs  Trace.cs  TraceListener.cs  TraceListenerCollection.cs
corlib/System/Globalization/: CultureInfo.cs  DateTimeFormatInfo.cs  NumberFormatInfo.cs
corlib/System/IO/: BinaryReader.cs  BinaryWriter.cs  EndOfStreamException.cs  IOException.cs  MemoryStream.cs  SeekOrigin.cs  Stream.cs  StreamReader.cs  StreamWriter.cs  TextReader.cs  TextWriter.cs
corlib/System/Net/: ChunkedReadStream.cs  Dns.cs  EndPoint.cs  HttpConnection.cs  HttpRequestStream.cs  HttpStatusCode.cs  HttpWebRequest.cs  HttpWebResponse.cs  IPAddress.cs  IPEndPoint.cs  IPHostEntry.cs  LengthReadStream.cs  ServicePointManager.cs  UntilCloseReadStream.cs  WebException.cs  WebExceptionStatus.cs  WebHeaderCollection.cs  WebRequest.cs  WebResponse.cs
corlib/System/Reflection/: Assembly.cs  BindingFlags.cs  ConstructorInfo.cs  EventInfo.cs  (+7 more)
crates/lamella-alloc/: Cargo.toml
crates/lamella-aot/: Cargo.toml
crates/lamella-aot/src/: arm32.rs  build.rs  cil.rs  debugmap.rs  lib.rs  regalloc.rs  resolver.rs  riscv32.rs  stringgen.rs  target.rs  wasm.rs
crates/lamella-asm-arm32/: Cargo.toml
crates/lamella-asm-riscv32/: Cargo.toml
crates/lamella-asm-wasm/: Cargo.toml
crates/lamella-assemble/: Cargo.toml
crates/lamella-assemble/src/: compile.rs  debug.rs  expr.rs  frame.rs  lib.rs  method.rs  session.rs  tokens.rs
crates/lamella-binder/: Cargo.toml
crates/lamella-binder/src/: bind.rs  bound.rs  complete.rs  conversion.rs  declaration.rs  diagnostic.rs  flow.rs  lib.rs  program.rs  reference.rs  resolve.rs  special.rs  statement.rs  symbols.rs  types.rs
crates/lamella-cil/: Cargo.toml
crates/lamella-cil-runtime/: Cargo.toml
crates/lamella-cil-runtime/src/: exception.rs  interp.rs  intrinsics.rs  lib.rs  memory.rs  module.rs  net.rs  object.rs  tls.rs  trap.rs
crates/lamella-cil/src/: body.rs  codec.rs  instruction.rs  lib.rs  opcode.rs
crates/lamella-cmsis-dap/: Cargo.toml
crates/lamella-cmsis-dap-nrf/: Cargo.toml
crates/lamella-cmsis-dap-nrf/src/: lib.rs
crates/lamella-cmsis-dap-sam/: Cargo.toml
crates/lamella-cmsis-dap/src/: lib.rs  proto.rs
crates/lamella-dap/: Cargo.toml
crates/lamella-dap/src/: adapter.rs  interp_backend.rs  lib.rs  main.rs  protocol.rs  serve.rs
crates/lamella-debug-backend/: Cargo.toml
crates/lamella-debug-device/: Cargo.toml
crates/lamella-debug-device/src/: lib.rs
crates/lamella-elf/: Cargo.toml
crates/lamella-firmware/: Cargo.toml
crates/lamella-firmware/src/: lib.rs
crates/lamella-gc/: Cargo.toml
crates/lamella-gc/src/: device.rs  device_heap.rs  heap.rs  lib.rs
crates/lamella-ir/: Cargo.toml
crates/lamella-ir/src/: function.rs  inst.rs  lib.rs  types.rs  verify.rs
crates/lamella-link/: Cargo.toml
crates/lamella-link/src/: lib.rs
crates/lamella-load/: Cargo.toml
crates/lamella-load/src/: lib.rs
crates/lamella-metadata/: Cargo.toml
crates/lamella-metadata/src/: bytes.rs  coded.rs  constant.rs  flags.rs  heaps.rs  image.rs  layout.rs  lib.rs  pdb.rs  pe.rs  reader.rs  rows.rs  signature.rs  tables.rs
crates/lamella-pe/: Cargo.toml
crates/lamella-pe/src/: heap.rs  lib.rs  module.rs  pdb.rs  pe.rs  root.rs  signature.rs  tables.rs
crates/lamella-py-bytecode/: Cargo.toml
crates/lamella-py-bytecode/src/: lib.rs
crates/lamella-py-frontend/: Cargo.toml
crates/lamella-py-frontend/src/: ast.rs  compile.rs  lexer.rs  lib.rs  lower.rs  parser.rs
crates/lamella-py-runtime/: Cargo.toml
crates/lamella-py-runtime/src/: builtins.rs  interp.rs  lib.rs  object.rs  trap.rs  value.rs
crates/lamella-repl/: Cargo.toml
crates/lamella-repl/src/: lib.rs  main.rs
crates/lamella-runner/: Cargo.toml
crates/lamella-runner/src/: lib.rs
crates/lamella-syntax/: Cargo.toml
crates/lamella-syntax/src/: ast.rs  codepages.rs  decode.rs  diagnostic.rs  lexer.rs  lib.rs  parser.rs  span.rs  token.rs  version.rs
crates/lamella-token/: Cargo.toml
crates/lamella-unicode/: Cargo.toml
crates/lamella-unicode/src/: lib.rs  tables.rs
crates/lamella-usbbulk/: Cargo.toml
crates/lamella-usbbulk/src/: lib.rs  linux.rs  macos.rs  windows.rs
crates/lamella-usbhid/: Cargo.toml
crates/lamella-usbhid/src/: lib.rs  linux.rs  macos.rs  windows.rs
crates/lamella-ves/: Cargo.toml
crates/lamella-ves/src/: exception.rs  interp.rs  intrinsics.rs  lib.rs  module.rs  object.rs  trap.rs  value.rs
crates/lamella-wasm/: Cargo.toml
crates/lamella-wasm/src/: abi.rs  aot.rs  compile.rs  dap.rs  lib.rs  py.rs  repl.rs
crates/lamella-wire/: Cargo.toml
crates/lamella-wire/src/: lib.rs
crates/lamella-wireline/: Cargo.toml
crates/lamella-wireline/src/: engine.rs  lib.rs
crates/lcsc/: Cargo.toml
(+44 files in other folders)
