[package]
name = "lamella-aot"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Lamella's ahead-of-time backend driver: lowers the middle IR to target machine code."

[dependencies]
lamella-ir = { path = "../lamella-ir" }
lamella-cil = { path = "../lamella-cil" }
lamella-asm-arm32 = { path = "../lamella-asm-arm32", optional = true }
# The AOT compiler reads an assembly's metadata to resolve call/ldstr tokens (the
# MetadataResolver); the core IR->native lowering itself stays metadata-free.
lamella-metadata = { path = "../lamella-metadata" }

[features]
default = ["arm32"]
# Each target backend is independently selectable, so a deployment compiles only
# the code generators it needs -- an ARM32 device never builds the RISC-V or WASM
# paths, and vice versa.
arm32 = ["dep:lamella-asm-arm32"]

[lints]
workspace = true
