[package]
name = "lamella-assemble"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "CIL emission for C# 1.0: lowering the binder's bound tree to CIL."

[dependencies]
lamella-syntax = { path = "../lamella-syntax" }
lamella-binder = { path = "../lamella-binder" }
lamella-cil = { path = "../lamella-cil" }
lamella-pe = { path = "../lamella-pe" }
lamella-token = { path = "../lamella-token" }

[dev-dependencies]
lamella-metadata = { path = "../lamella-metadata" }

[lints]
workspace = true
