[package]
name = "lamella-cil-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "The Lamella virtual execution system: a CIL interpreter implemented from ECMA-335."

[dependencies]
lamella-cil = { path = "../lamella-cil" }
lamella-token = { path = "../lamella-token" }
# Accurate no_std transcendental math (sqrt/sin/cos/pow/log/exp), behind `math-transcendental`.
# A MUSL/fdlibm port (the accurate option; a fast/approximate alternative is a future knob).
libm = { version = "0.2.16", optional = true }

[features]
default = ["bcl", "NETMFv4_4", "exceptions", "float", "gc", "finalizers", "math-transcendental"]
# The base BCL intrinsics (System.Console / System.String core / Object..ctor): the
# ECMA-335 Kernel Profile floor. Off => the minimal interpreter core (arithmetic,
# control flow, the object model) with no BCL surface -- the smallest build for a
# constrained target. The runtime side of a capability-profile surface knob.
bcl = []
# The additional NETMFv4_4-profile BCL surface beyond the Kernel Profile
# (richer String, Math, Char, parsing). Off => the Kernel-only floor. A surface knob.
NETMFv4_4 = ["bcl"]
# Structured exception handling (throw / try-catch / finally). Off => those opcodes
# are unsupported and the unwinder is stripped under LTO -- the smallest tier, where a
# fault terminates rather than unwinds. A capability-profile knob.
exceptions = []
# The moving (mark-compact) garbage collector. Off (the `gc = none/marshal` tiers) =>
# the bump arena with no collector, root machinery compiled out -- the no-GC driver /
# tiny-target profile. A capability-profile knob.
gc = []
# Object finalization: destructors / Finalize via an f-reachable queue run at a GC
# safepoint, plus GC.SuppressFinalize / ReRegisterForFinalize and resurrection. Requires
# `gc` (only a collector detects unreachability). Off => no finalization machinery, the
# embedded default. A capability-profile knob.
finalizers = ["gc"]
# Floating-point support: the `Value::Float` value, the float CIL opcodes (ldc.r4/r8, conv.r*,
# float arithmetic / comparison, ckfinite) and the float BCL (Double.ToString, the Math double
# overloads). Off => the no-float tier: those opcodes trap and the float code is compiled out --
# for the smallest targets that have no FPU and use no float. A capability-profile knob.
float = []
# String storage encoding (a developer knob; .NET UTF-16 String semantics hold either way).
# Default (feature off) = UTF-16 (O(1) indexing). On = UTF-8 (~half the ASCII-text memory,
# O(n) UTF-16 indexing; the well-formed tier -- WTF-8 surrogate parity is a future feature).
string-utf8 = []
# Typed references (System.TypedReference): the mkrefany / refanyval / refanytype opcodes
# (__makeref / __refvalue / __reftype) and the Value::TypedRef they pass. Off (the default,
# the tiny-target floor) => those three opcodes trap cleanly; they are vanishingly rare in
# C# 1.0 (low-level reflection / C variadic interop). A capability-profile knob.
typed-references = []
# Varargs (the arglist opcode / __arglist): pushes a RuntimeArgumentHandle for the current
# method's vararg arguments. Off (the default) => arglist traps. SHELL ONLY: the full vararg
# ecosystem -- the vararg calling convention (extra args beyond the fixed params at a call
# site) and the System.ArgIterator BCL type that walks the handle via TypedReference -- is a
# follow-up, so the handle this pushes is a placeholder no ArgIterator yet consumes. Implies
# typed-references (an ArgIterator iterates the handle as TypedReferences). A capability knob.
varargs = ["typed-references"]
# The floating-point transcendentals (Math.Sqrt/Sin/Cos/Tan/Pow/Log/Log10/Exp), backed by the
# `libm` crate. A floating-point knob: off => they bind nothing and libm is not compiled (the
# rounding + arithmetic float ops stay). FUTURE (for discussion): a fast/approximate backend
# (e.g. micromath) selectable against libm -- an accuracy-vs-size/speed knob.
math-transcendental = ["NETMFv4_4", "float", "dep:libm"]

[lints]
workspace = true
