[package]
name = "lamella-cil"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "CIL opcodes and instruction model, implemented from ECMA-335 Partition III."

[dependencies]
lamella-token = { path = "../lamella-token" }

[lints]
workspace = true
