[package]
name = "lamella-cmsis-dap-nrf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Nordic nRF51 flash programming over the Lamella CMSIS-DAP debug stack -- a device-specific extension of lamella-cmsis-dap."

[lints]
workspace = true

[dependencies]
lamella-cmsis-dap = { path = "../lamella-cmsis-dap" }
lamella-usbhid = { path = "../lamella-usbhid", optional = true }

[features]
# `microbit` adds the one-call flash_microbit() helper, opening the micro:bit's on-board HID probe.
microbit = ["dep:lamella-usbhid"]

[dev-dependencies]
# Tests drive a Dap against the shared probe-protocol mock; examples open a real probe.
lamella-cmsis-dap = { path = "../lamella-cmsis-dap", features = ["test-util"] }
lamella-usbhid = { path = "../lamella-usbhid" }
# The deploy-cs example builds a C# assembly to a chip image (build_cortex_m) before flashing.
lamella-aot = { path = "../lamella-aot", features = ["arm32"] }
