[package]
name = "lamella-cmsis-dap-nrf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Nordic nRF51 flash programming over the Lamella CMSIS-DAP debug stack -- a device-specific extension of lamella-cmsis-dap."

[lints]
workspace = true

[dependencies]
lamella-cmsis-dap = { path = "../lamella-cmsis-dap" }
lamella-usbhid = { path = "../lamella-usbhid", optional = true }

[features]
# `microbit` adds the one-call flash_microbit() helper, opening the micro:bit's on-board HID probe.
microbit = ["dep:lamella-usbhid"]

[dev-dependencies]
# Tests drive a Dap against the shared probe-protocol mock; examples open a real probe.
lamella-cmsis-dap = { path = "../lamella-cmsis-dap", features = ["test-util"] }
lamella-usbhid = { path = "../lamella-usbhid" }
# The deploy-cs example builds a C# assembly to a chip image (build_cortex_m) before flashing.
lamella-aot = { path = "../lamella-aot", features = ["arm32"] }
# The deploy-py example compiles a Python function through the shared backend, then hand-assembles a stub.
lamella-py-frontend = { path = "../lamella-py-frontend" }
lamella-asm-arm32 = { path = "../lamella-asm-arm32" }
lamella-ir = { path = "../lamella-ir" }
# The deploy-alloc example links a C# object against a Rust GC-seed object (the object-path deploy).
lamella-elf = { path = "../lamella-elf" }
lamella-link = { path = "../lamella-link" }
# The deploy-firmware example uses the one-call CIL -> flashable image pipeline.
lamella-firmware = { path = "../lamella-firmware" }
