[package]
name = "lamella-cmsis-dap"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "A CMSIS-DAP debug-probe host -- the command protocol and ADIv5/SWD transactions -- implemented from the Arm CMSIS-DAP and ADIv5 specifications."

[lints]
workspace = true

[dependencies]
lamella-usbhid = { path = "../lamella-usbhid" }
