[package]
name = "lamella-cmsis-dap"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "A CMSIS-DAP debug-probe host -- the command protocol and ADIv5/SWD transactions -- implemented from the Arm CMSIS-DAP and ADIv5 specifications."

[lints]
workspace = true

[features]
default = ["usbhid"]
# The native USB-HID transport (`lamella-usbhid`). Disable for non-native targets such as wasm32,
# where the embedder supplies its own `Transport` (e.g. the browser's WebHID via a JS shim); the
# protocol / ADIv5 logic and `Dap<T: Transport>` stay target-independent either way.
usbhid = ["dep:lamella-usbhid"]
# Exposes the `testing` module (the probe-protocol mock) to the device-specific extension crates
# (lamella-cmsis-dap-sam, lamella-cmsis-dap-nrf) for their tests. Off by default; not in the shipped API.
test-util = []

[dependencies]
lamella-usbhid = { path = "../lamella-usbhid", optional = true }
