[package]
name = "lamella-dap"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "A Debug Adapter Protocol server over the Lamella interpreter (host-side)."

# Host-side debugger; std and external deps are allowed here (User-approved), unlike
# the no_std libraries. serde_json carries the DAP JSON wire format.
[dependencies]
# The backend seam (the DebugBackend trait): a dependency-free leaf crate so an
# on-device backend can implement it without pulling the interpreter or the JSON layer.
lamella-debug-backend = { path = "../lamella-debug-backend" }
lamella-ves = { path = "../lamella-ves" }
# disassemble renders CIL opcodes/operands.
lamella-cil = { path = "../lamella-cil" }
# The server binary loads a program to debug; the library does not need these.
lamella-load = { path = "../lamella-load" }
lamella-metadata = { path = "../lamella-metadata" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# The adapter tests build hand-written programs, which also needs the token model.
[dev-dependencies]
lamella-token = { path = "../lamella-token" }

[lints]
workspace = true
