[package]
name = "lamella-dap"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "A Debug Adapter Protocol server over the Lamella interpreter (host-side)."

# Host-side debugger; std and external deps are allowed here (User-approved), unlike
# the no_std libraries. serde_json carries the DAP JSON wire format.
[dependencies]
# The backend seam (the DebugBackend trait): a dependency-free leaf crate so an
# on-device backend can implement it without pulling the interpreter or the JSON layer.
lamella-debug-backend = { path = "../lamella-debug-backend" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# The interpreter debug backend + the CIL server binary -- behind the `interpreter`
# feature so a DEVICE DAP server (DeviceBackend over CMSIS-DAP) links the adapter + serve
# WITHOUT the interpreter.
lamella-cil-runtime = { path = "../lamella-cil-runtime", optional = true }
lamella-cil = { path = "../lamella-cil", optional = true }
lamella-load = { path = "../lamella-load", optional = true }
lamella-metadata = { path = "../lamella-metadata", optional = true }
# Source mapping rebuilds method tokens to resolve a PDB rid to the interpreter's MethodId.
lamella-token = { path = "../lamella-token", optional = true }

[features]
default = ["interpreter"]
# The interpreter backend (InterpreterBackend) + the `lamella-dap` CIL server binary.
# Off => a trait-only adapter + serve layer a device backend plugs into; no interpreter.
interpreter = [
    "dep:lamella-cil-runtime",
    "dep:lamella-cil",
    "dep:lamella-load",
    "dep:lamella-metadata",
    "dep:lamella-token",
]

# The CIL server binary needs the interpreter; a device server is a separate binary.
[[bin]]
name = "lamella-dap"
path = "src/main.rs"
required-features = ["interpreter"]

[dev-dependencies]
# The source-mapping integration test compiles a fixture (with a Portable PDB) in-memory.
lamella-assemble = { path = "../lamella-assemble" }

[lints]
workspace = true
