[package]
name = "lamella-debug-device"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "An on-device DebugBackend: drives a halted Cortex-M target over the Lamella CMSIS-DAP stack, so the lamella-dap adapter (and VS Code) can debug AOT-compiled code on real hardware."

[lints]
workspace = true

[dependencies]
lamella-debug-backend = { path = "../lamella-debug-backend" }
lamella-cmsis-dap = { path = "../lamella-cmsis-dap" }

# The device DAP server binary links the adapter + wire protocol WITHOUT the interpreter,
# and lowers the deployed program (lamella-aot) + reads its Portable PDB (lamella-metadata)
# to compose the native -> source-line mapping at launch.
lamella-dap = { path = "../lamella-dap", default-features = false }
lamella-usbhid = { path = "../lamella-usbhid" }
lamella-aot = { path = "../lamella-aot" }
lamella-metadata = { path = "../lamella-metadata" }
