[package]
name = "lamella-load"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Loads an ECMA-335 assembly into a runnable lamella-cil-runtime module."

[dependencies]
lamella-cil = { path = "../lamella-cil" }
lamella-metadata = { path = "../lamella-metadata" }
lamella-token = { path = "../lamella-token" }
lamella-cil-runtime = { path = "../lamella-cil-runtime", default-features = false }

[features]
# Mirror lamella-cil-runtime's BCL surface tiers + capability knobs, so a minimal loader build
# gates out the same bindings the interpreter does.
default = ["NETMFv4_4", "exceptions", "float", "gc", "finalizers", "math-transcendental"]
bcl = ["lamella-cil-runtime/bcl"]
NETMFv4_4 = ["bcl", "lamella-cil-runtime/NETMFv4_4"]
exceptions = ["lamella-cil-runtime/exceptions"]
gc = ["lamella-cil-runtime/gc"]
finalizers = ["gc", "lamella-cil-runtime/finalizers"]
# Floating-point support (Value::Float, float opcodes, float BCL). See lamella-cil-runtime.
float = ["lamella-cil-runtime/float"]
# String storage encoding (default off = UTF-16; on = UTF-8). See lamella-cil-runtime.
string-utf8 = ["lamella-cil-runtime/string-utf8"]
# Typed references (mkrefany / refanyval / refanytype). Off by default. See lamella-cil-runtime.
typed-references = ["lamella-cil-runtime/typed-references"]
# Varargs (the arglist opcode; shell only). Off by default. See lamella-cil-runtime.
varargs = ["typed-references", "lamella-cil-runtime/varargs"]
# The floating-point transcendentals (Math.Sqrt/Sin/Pow/...), via libm. See lamella-cil-runtime.
math-transcendental = ["NETMFv4_4", "float", "lamella-cil-runtime/math-transcendental"]

[dev-dependencies]
# Host-only: the reactor's readiness poll for the run-with-corlib example's NetBackend (sockets).
mio = { version = "1", features = ["net", "os-poll"] }

[lints]
workspace = true
